fix: Repair failing unit tests and CI integration tests #12350